# ia-support-platform

./: .gitignore  README.md
.ai/: AGENT.md  DESIGN.md  PROJECT.md  PROJECT_CONTEXT.md  SUPORTE_AGENT.md  TODO_LIST.md
DesignSystem/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  atendimento.html  brand-spec.md  cliente.html  configuracoes.html  conhecimento.html  dashboard.html  ia-dashboard.html  index.html  kanban.html  relatorios.html
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: da5b181d8676_initial_schema.py  ec53387401ba_remove_historico_table.py
backend/app/: main.py
backend/app/ai/: ai_cache.py  ollama_service.py  openai_service.py  prompts.py  router.py
backend/app/api/: deps.py  websocket_manager.py
backend/app/api/routes/: __init__.py  auth.py  chats.py  clientes.py  kanban.py  knowledge_base.py  mensagens.py  webhooks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  atendente.py  chat.py  cliente.py  historico.py  ia_diagnostico.py  knowledge_base.py  mensagem.py  tag.py
backend/app/schemas/: auth.py  chat.py  cliente.py  kanban.py  knowledge_base.py  mensagem.py  webhook.py
backend/app/services/: auth_service.py  chat_service.py  cliente_service.py  kanban_service.py  knowledge_base_service.py  mensagem_service.py  webhook_service.py
backend/tests/: conftest.py  test_api.py  test_chat_service.py  test_schemas.py
docs/: n8n-workflow.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+48 files in other folders)
