[project]
name = "emsoft-support-api"
version = "0.1.0"
description = "EMSoft Support AI Platform - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "openai>=1.40.0",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "aiosqlite>=0.20.0",
]

# requirements.txt é a fonte canônica para deploy/Dockerfile.
# pyproject.toml mantém as dependências para compatibilidade com pip install -e .

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
